<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="dark_mode">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="share">Поделиться</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="settings">Настройки</string>
    <string name="back">Назад</string>
    <string name="msg_to_dev_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_app_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="email">mikhailov.nick@ya.ru</string>
    <string name="terms_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\n подключение к интернету</string>
    <string name="itunes_base_url">https://itunes.apple.com</string>
    <string name="enter_query">Введите запрос</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="clear">Очистить</string>
    <string name="play_pause">Play/Pause</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="start_timer">00:00</string>
    <string name="time_format">mm:ss</string>
    <string name="err_msg_to_send_email">Не удалось отправить сообщение!</string>
    <string name="err_msg_to_share">Не удалось поделиться ссылкой!</string>
    <string name="err_msg_to_open_url">Не удалось открыть ссылку!</string>
    <string name="msg_to_dev_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="library_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_are_empty_string1">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create">Создать</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="playlist_created">Плейлист %s создан </string>
    <string name="playlist_updated">Плейлист %s обновлен </string>
    <string name="added_to_playlist">Добавлено в плейлист %s</string>
    <string name="track_already_added">Трек уже добавлен в плейлист %s</string>
    <string name="finish_playlist_creating">Завершить создание плейлиста?</string>
    <string name="data_save_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="delete_track_confirmation">Хотите удалить трек?</string>
    <string name="delete_playlist_confirmation">Хотите удалить плейлист "%s"?</string>
    <string name="no">НЕТ</string>
    <string name="yes">ДА</string>
    <string name="ok">OK</string>
    <string name="share_empty_list_warning">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="json_track">jsonTrack</string>
    <string name="playlist_id">playlistId</string>
    <string name="json_playlist">jsonPlaylist</string>
    <string name="ss">\"$s$s\"</string>
    <string name="edit">Редактировать</string>
    <string name="no_tracks_in_playlist">В плейлисте нет треков</string>

</resources>