<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/some_id"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_block_height">
            <TextView
                style="@style/block_title"
                android:textAppearance="@style/text_title_white"
                android:text="@string/title"/>
        </LinearLayout>
        <Button
            android:id="@+id/search_button"
            style="@style/button_big"
            app:cornerRadius="@dimen/corner_radius"
            android:text="@string/search"
            app:icon="@drawable/search_light_mode"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"/>
        <Button
            android:id="@+id/library_button"
            style="@style/button_big"
            android:text="@string/library"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/library_light_mode"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black">
        </Button>
        <Button
            android:id="@+id/settings_button"
            style="@style/button_big"
            android:text="@string/settings"
            app:cornerRadius="@dimen/corner_radius"
            app:icon="@drawable/settings_light_mode"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            android:layout_marginBottom="@dimen/margin_bottom">
        </Button>
</LinearLayout>