<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_block_height"
        android:layout_marginStart="@dimen/default_margin_horizontal"
        android:gravity="center_vertical|start"
        android:text="@string/settings"
        android:textAppearance="@style/text_regular_22" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        style="@style/text_regular_16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginHorizontal="@dimen/default_margin_horizontal"
        android:text="@string/dark_mode"
        app:thumbTint="?attr/tickColorInactive" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin_horizontal">

        <TextView
            style="@style/text_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/shareApp" />

        <ImageView
            android:id="@+id/shareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/shareApp"
            android:src="@drawable/share_inactive" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin_horizontal">

        <TextView
            style="@style/text_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/support" />

        <ImageView
            android:id="@+id/supportIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/support"
            android:src="@drawable/support_icon" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|start"
        android:orientation="horizontal"
        android:padding="@dimen/default_margin_horizontal">

        <TextView
            style="@style/text_regular_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/agreement" />

        <ImageView
            android:id="@+id/agreementIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/agreement"
            android:src="@drawable/arrow_forward_icon" />
    </FrameLayout>
</LinearLayout>

