<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_block_height"
        android:layout_marginStart="@dimen/default_margin_horizontal"
        android:gravity="center_vertical|start"
        android:text="@string/search"
        android:textAppearance="@style/text_regular_22" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_block_height"
        android:layout_marginBottom="@dimen/medium_padding"
        android:gravity="center_vertical|start"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/searchField"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_field_height"
            android:layout_marginHorizontal="@dimen/default_margin_horizontal"
            android:autofillHints="@string/search"
            android:background="@drawable/edit_text_style"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableTint="?attr/textAppearanceBody2"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:maxLength="@integer/text_medium"
            android:padding="@dimen/medium_padding"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/textAppearanceBody2" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/default_margin_horizontal"
            android:contentDescription="@string/clear"
            android:src="@drawable/clear_icon"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/square_image_45"
            android:layout_height="@dimen/square_image_45"
            android:layout_marginTop="@dimen/large_top_margin"
            android:layout_gravity="center"
            android:indeterminateTint="@color/blue"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/placeholderImage"
            style="@style/text_regular_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/nothing_found_placeholder" />

        <TextView
            android:id="@+id/placeholderText"
            style="@style/text_medium_19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:gravity="center"
            android:text="@string/nothing_found" />

        <Button
            android:id="@+id/placeholderButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:layout_gravity="center"
            android:backgroundTint="?attr/buttonTint"
            android:text="@string/update"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/historyText"
            style="@style/text_regular_22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/default_margin_vertical"
            android:gravity="center"
            android:text="@string/search_history" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistoryView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/clearHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_vertical"
                android:backgroundTint="?attr/buttonTint"
                android:text="@string/clear_history"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trackListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
</LinearLayout>

