<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.067" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.067" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.933" />

    <ImageButton
        android:id="@+id/arrowBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/top_guideline"
        app:srcCompat="@drawable/array_back_icon" />

    <ImageView
        android:id="@+id/trackCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="@dimen/big_margin_vertical"
        android:src="@drawable/cover_placeholder"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/trackName"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <TextView
        android:id="@+id/trackName"
        style="@style/text_medium_22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="TrackName"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/artistName"
        android:layout_marginBottom="@dimen/default_margin_vertical"/>

    <TextView
        android:id="@+id/artistName"
        style="@style/text_medium_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/playPauseButton"
        android:layout_marginBottom="@dimen/default_margin_vertical"
        tools:text="ArtistName"/>

    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="@dimen/square_image_100"
        android:layout_height="@dimen/square_image_100"
        app:layout_constraintEnd_toEndOf="@+id/artistName"
        app:layout_constraintStart_toStartOf="@+id/artistName"
        app:layout_constraintBottom_toTopOf="@+id/trackTime"
        android:src="@drawable/play_button"
        android:background="@null"
        android:padding="0dp"
        android:layout_marginBottom="@dimen/default_margin_vertical"
        android:contentDescription="@string/play_pause"/>

    <ImageButton
        android:id="@+id/addToPlayListButton"
        android:layout_width="@dimen/square_image_51"
        android:layout_height="@dimen/square_image_51"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintStart_toEndOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        android:src="@drawable/add_to_playlist_button_false"
        android:background="@null"
        android:padding="0dp"
        android:contentDescription="@string/add_to_playlist"/>

    <ImageButton
        android:id="@+id/addToFavoriteButton"
        android:layout_width="@dimen/square_image_51"
        android:layout_height="@dimen/square_image_51"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        android:src="@drawable/add_to_favorite_button_false"
        android:background="@null"
        android:padding="0dp"
        android:contentDescription="@string/add_to_favorites"/>

    <TextView
        android:id="@+id/trackTime"
        style="@style/text_medium_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/listDurationName"
        app:layout_constraintEnd_toEndOf="@+id/playPauseButton"
        app:layout_constraintStart_toStartOf="@+id/playPauseButton"
        android:layout_marginBottom="@dimen/default_margin_vertical"
        tools:text="TrackTime"/>

    <TextView
        android:id="@+id/listDurationName"
        style="@style/text_regular_13_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        app:layout_constraintBaseline_toBaselineOf="@id/listDurationValue"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackTime" />

    <TextView
        android:id="@+id/listDurationValue"
        style="@style/text_regular_13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/listDurationName"
        app:layout_constraintBottom_toTopOf="@id/listCollectionName"
        android:layout_marginBottom="@dimen/default_margin_vertical"
        tools:text="слишком длинная песня ну очень длинная песня"/>
    <TextView
        android:id="@+id/listCollectionName"
        style="@style/text_regular_13_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBaseline_toBaselineOf="@id/listCollectionValue"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/listDurationName" />

    <TextView
        android:id="@+id/listCollectionValue"
        style="@style/text_regular_13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/album"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/listCollectionName"
        app:layout_constraintBottom_toTopOf="@id/listYearName"
        android:layout_marginBottom="@dimen/default_margin_vertical"/>
    <TextView
        android:id="@+id/listYearName"
        style="@style/text_regular_13_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintBaseline_toBaselineOf="@id/listYearValue"/>

    <TextView
        android:id="@+id/listYearValue"
        style="@style/text_regular_13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/year"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/listYearName"
        app:layout_constraintBottom_toTopOf="@id/listGenreName"
        android:layout_marginBottom="@dimen/default_margin_vertical"/>
    <TextView
        android:id="@+id/listGenreName"
        style="@style/text_regular_13_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintBaseline_toBaselineOf="@id/listGenreValue"/>

    <TextView
        android:id="@+id/listGenreValue"
        style="@style/text_regular_13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:textAlignment="textEnd"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="@string/genre"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/listGenreName"
        app:layout_constraintBottom_toTopOf="@id/listCountryName"
        android:layout_marginBottom="@dimen/default_margin_vertical"/>
    <TextView
        android:id="@+id/listCountryName"
        style="@style/text_regular_13_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintBaseline_toBaselineOf="@id/listCountryValue"
/>

    <TextView
        android:id="@+id/listCountryValue"
        style="@style/text_regular_13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/medium_padding"
        android:ellipsize="end"
        android:text="@string/country"
        android:maxLines="1"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toEndOf="@+id/listCountryName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/big_margin_vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>